fix blimage (visible hash if image has opacity)

--- a/src/styles/blimage.css
+++ b/src/styles/blimage.css
@@ -6,6 +6,9 @@
   width: 100%;
   height: 100%;
   z-index: 1;
+  opacity: 1;
+  visibility: visible;
+  transition: .2s ease-in-out;
 }
 
 .blurhash-image {
